--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
   </head>
   <body>
     <!-- Início Header -->
+    <section>
+      <div class="conteudo-social">
+        <a href="https://www.youtube.com" class="fa fa-youtube" aria-hidden="true" target="_blank"></a>
+        <a href="#" class="fa fa-facebook" aria-hidden="true" target="_blank"></a>
+        <a href="#" class="fa fa-twitter" aria-hidden="true" target="_blank"></a>
+        <a href="#" class="fa fa-instagram" aria-hidden="true" target="_blank"></a>
+        <a href="#" class="fa fa-spotify" aria-hidden="true" target="_blank"></a>
+      </div>
+    </section>
     <header>
       <div class="container-grid conteudo-header">
         <img class="logo" src="./img/logos_senai_branco.png" alt="Logo Senai" />
@@ -33,7 +42,7 @@
     <!-- Início Whats -->
     <section class="whatsapp">
       <div class="container-grid logo-whats">
-        <a href="https://api.whatsapp.com/send?phone=5515998144779&text=Ol%C3%A1,%20estou%20navegando%20no%20site%20LandingPages%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es."><img src="./img/whats.png" alt="Contato Whatsapp" /></a>
+        <a href="https://api.whatsapp.com/send?phone=5515998144779&text=Ol%C3%A1,%20estou%20navegando%20no%20site%20LandingPages%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." target="_blank"><img src="./img/whats.png" alt="Contato Whatsapp" /></a>
       </div>
     </section>
     <!-- Fim Whats -->
