--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Landing Page >> Senai</title>
   </head>
   <body>
-    <!-- Início Header -->
+    <!-- Início redes sociais -->
     <section>
       <div class="conteudo-social">
         <a href="https://www.youtube.com" class="fa fa-youtube" aria-hidden="true" target="_blank"></a>
@@ -20,6 +20,8 @@
         <a href="#" class="fa fa-spotify" aria-hidden="true" target="_blank"></a>
       </div>
     </section>
+    <!-- Fim redes sociais -->
+    <!-- Início Header -->
     <header>
       <div class="container-grid conteudo-header">
         <img class="logo" src="./img/logos_senai_branco.png" alt="Logo Senai" />
