--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/layout_mobile.css">
+    <link rel="stylesheet" href="./bootstrap/css/bootstrap.min.css">
     <script src="https://kit.fontawesome.com/02a70fc82c.js" crossorigin="anonymous"></script>
     <title>Landing Page >> Senai</title>
   </head>
@@ -27,9 +28,9 @@
         <img class="logo" src="./img/logos_senai_branco.png" alt="Logo Senai" />
         <nav id="menu-header" class="menu-header">
           <a href="#" title="Início da página" class="fa-solid fa-house"></a>
-          <a href="#">Sobre</a>
-          <a href="#">Endereço</a>
-          <a class="botao" href="mailto:example@email.com">Contate-nos</a>
+          <a id="font" href="#">Sobre</a>
+          <a id="font" href="#">Endereço</a>
+          <a id="font" class="botao" href="mailto:example@email.com">Contate-nos</a>
         </nav>
         <a
           class="menu-barras"
@@ -145,5 +146,6 @@
   </body>
 
   <script src="./js/mostrarMenu.js"></script>
+  <script src="./bootstrap/js/bootstrap.min.js"></script>
 
 </html>
